Issue #12811 - Added middle name to contributor view

--- a/config/sync/views.view.bibcite_contributor_admin.yml
+++ b/config/sync/views.view.bibcite_contributor_admin.yml
@@ -82,6 +82,7 @@ display:
           columns:
             bibcite_contributor_bulk_form: bibcite_contributor_bulk_form
             first_name: first_name
+            middle_name: middle_name
             last_name: last_name
             prefix: prefix
             suffix: suffix
@@ -93,6 +94,13 @@ display:
               empty_column: false
               responsive: ''
             first_name:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            middle_name:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -248,6 +256,71 @@ display:
           field_api_classes: false
           entity_type: bibcite_contributor
           entity_field: first_name
+          plugin_id: field
+        middle_name:
+          id: middle_name
+          table: bibcite_contributor
+          field: middle_name
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Middle name'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: bibcite_contributor
+          entity_field: middle_name
           plugin_id: field
         last_name:
           id: last_name
@@ -691,7 +764,8 @@ display:
     display_title: Page
     position: 1
     display_options:
-      display_extenders: {  }
+      display_extenders:
+        metatag_display_extender: {  }
       path: admin/content/bibcite/contributor
     cache_metadata:
       max-age: 0
