Issue #11532 - Add media term apply action and refactor submit lines

--- a/config/sync/views.view.os_media.yml
+++ b/config/sync/views.view.os_media.yml
@@ -20,7 +20,6 @@ dependencies:
     - image
     - media
     - os_media
-    - node
     - rest
     - serialization
     - vsite
@@ -592,6 +591,7 @@ display:
           action_title: Action
           include_exclude: include
           selected_actions:
+            - cp_taxonomy_add_terms_media_action
             - media_delete_action
           entity_type: media
           plugin_id: bulk_form
