--- a/config/sync/views.view.os_media.yml
+++ b/config/sync/views.view.os_media.yml
@@ -592,6 +592,7 @@ display:
           include_exclude: include
           selected_actions:
             - cp_taxonomy_add_terms_media_action
+            - cp_taxonomy_remove_terms_media_action
             - media_delete_action
           entity_type: media
           plugin_id: bulk_form
