--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -790,6 +790,7 @@ display:
           selected_actions:
             - bibcite_export_multiple
             - cp_bibcite_entity_reference_delete
+            - cp_taxonomy_add_terms_bibcite_reference_action
           entity_type: bibcite_reference
           plugin_id: bulk_form
         title:
