Issue #11532 - Dependency fixes

--- a/config/sync/system.action.cp_taxonomy_add_terms_media_action.yml
+++ b/config/sync/system.action.cp_taxonomy_add_terms_media_action.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - cp_taxonomy
     - media
 id: cp_taxonomy_add_terms_media_action
 label: 'Apply Taxonomy term'
