--- a/profile/modules/cp/modules/cp_taxonomy/config/install/system.action.cp_taxonomy_remove_terms_media_action.yml
+++ b/profile/modules/cp/modules/cp_taxonomy/config/install/system.action.cp_taxonomy_remove_terms_media_action.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - cp_taxonomy
     - media
 id: cp_taxonomy_remove_terms_media_action
 label: 'Remove Taxonomy term'
