--- a/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.routing.yml
+++ b/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.routing.yml
@@ -112,3 +112,13 @@ cp.taxonomy.add_terms_bibcite_reference_multiple_form:
     _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
+cp.taxonomy.remove_terms_bibcite_reference_multiple_form:
+  path: '/cp/content/remove-terms-from-publication'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\RemoveTermsFromPublicationForm'
+    entity_type_id: 'bibcite_reference'
+  requirements:
+    _group_permission: 'manage taxonomy'
+    _group_member: 'TRUE'
+  options:
+    _admin_route: 'TRUE'
