Issue #11532 - Dependency fixes

--- a/config/sync/system.action.cp_taxonomy_remove_terms_node_action.yml
+++ b/config/sync/system.action.cp_taxonomy_remove_terms_node_action.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - cp_taxonomy
+    - node
 id: cp_taxonomy_remove_terms_node_action
 label: 'Remove Taxonomy term'
 type: node
