--- a/config/sync/system.action.cp_taxonomy_add_terms_node_action.yml
+++ b/config/sync/system.action.cp_taxonomy_add_terms_node_action.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - cp_taxonomy
+    - node
 _core:
   default_config_hash: tptnyd7jG9C4ckt1pgN8jKkRCaCKdPGP7XBTKjxPZnc
 id: cp_taxonomy_add_terms_node_action
