Issue #12811 - Added AJAX to display author name format

--- a/profile/modules/apps/os_publications/os_publications.libraries.yml
+++ b/profile/modules/apps/os_publications/os_publications.libraries.yml
@@ -9,3 +9,6 @@ drupal.os_publications:
 drupal.os_publications.misc:
   js:
     js/os_publications.toggle.js: {}
+drupal.os_publications.author:
+  js:
+    js/os_publications.author_parse.js: {}
