--- a/config/sync/core.entity_form_display.paragraph.slideshow.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.slideshow.default.yml
@@ -5,13 +5,15 @@ dependencies:
   config:
     - field.field.paragraph.slideshow.field_slide_alt_text
     - field.field.paragraph.slideshow.field_slide_description
+    - field.field.paragraph.slideshow.field_slide_file_image
     - field.field.paragraph.slideshow.field_slide_headline
-    - field.field.paragraph.slideshow.field_slide_image
     - field.field.paragraph.slideshow.field_slide_link
     - field.field.paragraph.slideshow.field_slide_title_text
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.slideshow
   module:
     - field_layout
+    - image_widget_crop
     - layout_discovery
     - link
 third_party_settings:
@@ -24,7 +26,7 @@ bundle: slideshow
 mode: default
 content:
   field_slide_alt_text:
-    weight: 6
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -32,14 +34,6 @@ content:
     type: string_textfield
     region: content
   field_slide_description:
-    weight: 5
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_slide_headline:
     weight: 3
     settings:
       size: 60
@@ -47,17 +41,32 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_slide_image:
-    weight: 2
+  field_slide_file_image:
+    weight: 0
     settings:
-      match_operator: CONTAINS
+      show_default_crop: true
+      warn_multiple_usages: true
+      preview_image_style: thumbnail
+      crop_preview_image_style: crop_thumbnail
+      progress_indicator: throbber
+      crop_list:
+        - crop_100_122
+        - crop_16_9
+      crop_types_required: {  }
+      show_crop_area: false
+    third_party_settings: {  }
+    type: image_widget_crop
+    region: content
+  field_slide_headline:
+    weight: 1
+    settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: string_textfield
     region: content
   field_slide_link:
-    weight: 4
+    weight: 2
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -65,7 +74,7 @@ content:
     type: link_default
     region: content
   field_slide_title_text:
-    weight: 7
+    weight: 5
     settings:
       size: 60
       placeholder: ''
