--- a/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
@@ -5,12 +5,13 @@ dependencies:
   config:
     - field.field.paragraph.slideshow.field_slide_alt_text
     - field.field.paragraph.slideshow.field_slide_description
+    - field.field.paragraph.slideshow.field_slide_file_image
     - field.field.paragraph.slideshow.field_slide_headline
-    - field.field.paragraph.slideshow.field_slide_image
     - field.field.paragraph.slideshow.field_slide_link
     - field.field.paragraph.slideshow.field_slide_title_text
     - paragraphs.paragraphs_type.slideshow
   module:
+    - image
     - layout_builder
     - link
 third_party_settings:
@@ -37,6 +38,15 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_slide_file_image:
+    weight: 8
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_slide_headline:
     weight: 3
     label: above
@@ -44,15 +54,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
-  field_slide_image:
-    type: entity_reference_entity_view
-    weight: 2
-    label: hidden
-    settings:
-      view_mode: slideshow_wide
-      link: false
-    third_party_settings: {  }
     region: content
   field_slide_link:
     weight: 4
