--- a/config/sync/field.field.block_content.dataverse_dataset_citation.field_dataset_persistent_id.yml
+++ b/config/sync/field.field.block_content.dataverse_dataset_citation.field_dataset_persistent_id.yml
@@ -10,7 +10,7 @@ field_name: field_dataset_persistent_id
 entity_type: block_content
 bundle: dataverse_dataset_citation
 label: 'Dataset Persistent Identifier'
-description: "Need help finding your Dataset Persistent Identifier? Learn how to here: <a href=\"https://help.theopenscholar.com/dataverse-dataset-citation\" target=\"_blank\">https://help.theopenscholar.com/dataverse-dataset-citation</a>. Note: this widget should be placed in the main content area, not in sidebar.\r\nIn braces (Format : 10.7910/DVN/GK6PR2) if DOI is selected and (Format : 1902.1/13713) if HDL is selected"
+description: "Need help finding your Dataset Persisent Identifier. Please visit <a href=\"https://dataverse.harvard.edu/\" target=\"_blank\">https://dataverse.harvard.edu/</a><br />\r\nExample of Persistent Identifier for DOI: 10.7910/DVN/GK6PR2<br />\r\nExample of Persistent Identifier for HDL: 1902.1/13713<br />\r\n<br />\r\nLearn how to here: <a href=\"https://help.theopenscholar.com/dataverse-dataset-citation\" target=\"_blank\">https://help.theopenscholar.com/dataverse-dataset-citation</a>.<br />\r\nNote: this widget should be placed in the main content area, not in sidebar."
 required: true
 translatable: false
 default_value: {  }
