Issue #12651 - Vsite Preset - Personal - Personal (#12794)
* Issue #12651 - Config entity update and new personal preset

* Issue #12651 - File scan and structure parse.

* Issue #12651 - File scan and structure parse.

* Issue #12651 - File scan and structure parse.

* Issue #12651 - Batch process changes.

* Issue #12651 - Vsite Group entity refactoring.

* Issue #12651 - Vsite Preset Group entity refactoring.

* Issue #12651 - WIP: Save code.

* Issue #12651 - WIP: Menu links creation and apps enabling.

* Issue #12651 - WIP: Code refactoing.

* Issue #12651 - WIP: Code refactoing.

* Issue #12651 - Kernel tests for helper.

* Issue #12651 - Added dependency and possible test fix.

* Issue #12651 - Code refactroing as per PR comments.

* Issue #12651 - Code refactroing as per PR comments.

* Issue #12651 - New App key for getting main list/page route.

* Issue #12651 - key changed and test fix.

* Issue #12651 - Save.

* Issue #12651 - Tests and code refactoring.

* Issue #12651 - Correction.

--- a/config/sync/vsite_preset.type.minimal.yml
+++ b/config/sync/vsite_preset.type.minimal.yml
@@ -7,4 +7,8 @@ label: Minimal
 description: 'Minimal preset with little enabled'
 applicableTo:
   personal: personal
-creationTasks: ''
+enabledApps:
+  class: class
+  page: page
+  publications: publications
+privateApps: {  }
