--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,9 @@ jobs:
     - script: robo job:check-coding-standards
     - script: robo job:run-unit-tests
     - script: robo job:check-module-circular-dependency
-    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3"
-    - script: robo job:run-kernel-tests "publications-1,wysiwyg,vsite,os,os-theme-preview"
+    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4"
+    - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
     - script: robo job:run-kernel-tests "cp,other,cp-menu,profiles,redirect,cp-appearance,os-search"
-    - script: robo job:run-kernel-tests "widgets-4,publications-2"
     - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
     - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
     - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect,os-search"
