--- a/config/sync/core.entity_view_display.node.presentation.teaser.yml
+++ b/config/sync/core.entity_view_display.node.presentation.teaser.yml
@@ -64,6 +64,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_attached_media: true
   field_presentation_slides: true
   langcode: true
   search_api_excerpt: true
