Issue #12847 - Redirect to current page after widget is deleted (#12880)
* Issue #12847 - Code changes and tests added.

* Issue #12847 - Fixed errors in other tests.

* Issue #12847 - Moved method to trait and fixed tests.

* Issue #12847 - Moved variables outside event.

* Issue #12847 - Added check for contextual links presence on page.

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -82,3 +82,8 @@ sliderWidget:
     - core/drupalSettings
     - slick/slick
     - slick/slick.theme
+contextualChanges:
+  js:
+    js/os_widgets.contextualChanges.js: {}
+  dependencies:
+    - core/drupal
