--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -509,7 +509,7 @@ display:
           entity_type: bibcite_reference
           entity_field: bibcite_year
           plugin_id: standard
-      title: 'Publications by Type'
+      title: Publications
       header: {  }
       footer: {  }
       empty: {  }
@@ -536,16 +536,18 @@ display:
         - 'languages:language_interface'
         - url.query_args
       tags:
-        - 'config:core.entity_view_display.bibcite_reference.artwork.default'
-        - 'config:core.entity_view_display.bibcite_reference.artwork.teaser'
-        - 'config:core.entity_view_display.bibcite_reference.audiovisual.default'
-        - 'config:core.entity_view_display.bibcite_reference.audiovisual.teaser'
+        - 'config:core.entity_view_display.bibcite_reference.data.default'
+        - 'config:core.entity_view_display.bibcite_reference.data.teaser'
         - 'config:core.entity_view_display.bibcite_reference.artwork.citation'
+        - 'config:core.entity_view_display.bibcite_reference.artwork.default'
         - 'config:core.entity_view_display.bibcite_reference.artwork.slide_teaser'
         - 'config:core.entity_view_display.bibcite_reference.artwork.table'
+        - 'config:core.entity_view_display.bibcite_reference.artwork.teaser'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.citation'
+        - 'config:core.entity_view_display.bibcite_reference.audiovisual.default'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.slide_teaser'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.table'
+        - 'config:core.entity_view_display.bibcite_reference.audiovisual.teaser'
         - 'config:core.entity_view_display.bibcite_reference.bill.citation'
         - 'config:core.entity_view_display.bibcite_reference.bill.default'
         - 'config:core.entity_view_display.bibcite_reference.bill.slide_teaser'
@@ -592,10 +594,8 @@ display:
         - 'config:core.entity_view_display.bibcite_reference.conference_proceedings.table'
         - 'config:core.entity_view_display.bibcite_reference.conference_proceedings.teaser'
         - 'config:core.entity_view_display.bibcite_reference.data.citation'
-        - 'config:core.entity_view_display.bibcite_reference.data.default'
         - 'config:core.entity_view_display.bibcite_reference.data.slide_teaser'
         - 'config:core.entity_view_display.bibcite_reference.data.table'
-        - 'config:core.entity_view_display.bibcite_reference.data.teaser'
         - 'config:core.entity_view_display.bibcite_reference.database.citation'
         - 'config:core.entity_view_display.bibcite_reference.database.default'
         - 'config:core.entity_view_display.bibcite_reference.database.slide_teaser'
@@ -1803,7 +1803,7 @@ display:
           separator: ''
           hide_empty: false
           default_field_elements: true
-      title: 'Publications by Title'
+      title: Publications
       sorts:
         title_first_char_excl_prep:
           id: title_first_char_excl_prep
@@ -2191,7 +2191,7 @@ display:
           view_mode: teaser
           entity_type: bibcite_reference
           plugin_id: rendered_entity
-      title: 'Publications by Author'
+      title: Publications
       sorts:
         first_letter_last_name_author:
           id: first_letter_last_name_author
@@ -2512,7 +2512,7 @@ display:
         metatag_display_extender: {  }
       path: publications/year
       display_description: ''
-      title: 'Publications by Year'
+      title: Publications
       defaults:
         title: false
         style: false
