Issue #12630 - Multiple words search (#12911)

--- a/config/sync/search_api_page.search_api_page.search.yml
+++ b/config/sync/search_api_page.search_api_page.search.yml
@@ -71,4 +71,5 @@ view_mode_configuration:
       software_project: ''
       software_release: ''
 show_search_form: true
-parse_mode: direct
+parse_mode: terms
+parse_mode_conjunction: OR
