Issue #12862 - Change Title Priority

--- a/config/sync/search_api.index.os_search_index.yml
+++ b/config/sync/search_api.index.os_search_index.yml
@@ -61,6 +61,7 @@ field_settings:
     label: 'Custom Title (text)'
     property_path: custom_title
     type: text
+    boost: !!float 5
   custom_type:
     label: 'Custom Type (text)'
     property_path: custom_type
