--- a/config/sync/search_api_page.search_api_page.search.yml
+++ b/config/sync/search_api_page.search_api_page.search.yml
@@ -17,7 +17,7 @@ searched_fields:
 style: view_modes
 view_mode_configuration:
   'entity:bibcite_reference':
-    default: default
+    default: citation
     overrides:
       artwork: ''
       audiovisual: ''
@@ -72,4 +72,3 @@ view_mode_configuration:
       software_release: ''
 show_search_form: true
 parse_mode: terms
-parse_mode_conjunction: OR
