--- a/config/sync/search_api_page.search_api_page.search.yml
+++ b/config/sync/search_api_page.search_api_page.search.yml
@@ -17,7 +17,7 @@ searched_fields:
 style: view_modes
 view_mode_configuration:
   'entity:bibcite_reference':
-    default: citation
+    default: default
     overrides:
       artwork: ''
       audiovisual: ''
