Issue #12763 - Travis Env Setup (#12897)
* Issue #12763 - Travis Env Setup

* Issue #12763 - Prepare Env vars before dockers spinning

* Issue #12763 - First Index Test

* Issue #12763 - Proper Filenames

* Issue #12763 - Check all jobs

* Issue #12763 - Correct test Group

* Issue #12763 - More Tests

* Issue #12763 - Travis Fixes

* Issue #12763 - More Tests

* Issue #12763 - More Tests

* Issue #12763 - Change configs

* Issue #12763 - Wait More

* Issue #12763 - PR Fixes

* Issue #12763 - PR Changes

* Issue #12763 - PR Changes

--- a/config/sync/search_api_page.search_api_page.search.yml
+++ b/config/sync/search_api_page.search_api_page.search.yml
@@ -17,7 +17,7 @@ searched_fields:
 style: view_modes
 view_mode_configuration:
   'entity:bibcite_reference':
-    default: default
+    default: citation
     overrides:
       artwork: ''
       audiovisual: ''
