--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
     - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
     - script: robo job:run-kernel-tests "cp-1,cp-2,other,cp-menu,profiles,redirect,cp-appearance,os-search"
     - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
+    - script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
     - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
     - script: robo job:run-functional-javascript-tests "os-search"
     - script: robo job:run-functional-javascript-tests "events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
