--- a/.travis/docker-compose.yml
+++ b/.travis/docker-compose.yml
@@ -28,6 +28,14 @@ services:
     volumes:
       - ./:/var/www/html
 
+  elasticsearch:
+    image: abutaha/aws-es-proxy:latest
+    container_name: "${PROJECT_NAME}_elasticsearch"
+    command: '-listen 0.0.0.0:9200 -endpoint ${AWS_ES_ACCESS_ENDPOINT}'
+    environment:
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+
   mailhog:
     image: mailhog/mailhog
     container_name: "${PROJECT_NAME}_mailhog"
