Issue #11532 - Create basic action and multiple form (#12807)
* Issue #11532 - Create basic action and multiple form

* Issue #11532 - Add new action to views bulk

* Issue #11532 - Handle ajax terms select with chosen

* Issue #11532 - Implement form submission and apply terms

* Issue #11532 - Prevent add duplicate, minor fixes

* Issue #11532 - Create test for node apply terms and permission fix

* Issue #11532 - Naming fix

* Issue #11532 - Implement remove taxonomy term action and test

* Issue #11532 - Refactor common code into BaseForm

* Issue #11532 - Remove debug screenshot

* Issue #11532 - Create const for duplicated tempstore key

* Issue #11532 - Refactor validate form and write test

* Issue #11532 - Extend functionality of taxonomy helper, allow to check bundle of vocab

* Issue #11532 - Add media term apply action and refactor submit lines

* Issue #11532 - Naming fixes

* Issue #11532 - Add media remove action , refactor form submit and create test

* Issue #11532 - Add publication apply terms functionality and test

* Issue #11532 - Naming fixes

* Issue #11532 - Dependency fixes

* Issue #11532 - Add publication remove terms functionality and test

* Issue #11532 - Use fix

* Issue #11532 - Dependency fixes

* Issue #11532 - Fix group naming

* Issue #11532 - Remove unecessary lines

* Issue #11532 - Remove admin route options

* Issue #11532 - Naming and Wave fix

* Issue #11532 - fixed contrast error

* Issue #11532 - Implement term and vocab storage

* Issue #11532 - Fix cancel behaviour

* Issue #11532 - Fix submit

* Issue #11532 - Fix type values

* Issue #11532 - Refactor test function, remove duplication

* Revert "Issue #11532 - Remove admin route options"

This reverts commit af7e964232f330d949237a21a21479e96157bf3e.

* Issue #11532 - Remove group member route options

* Issue #11532 - Naming fix

* Issue #11532 - Refactor test trait

* Issue #11532 - Remove all g

--- a/config/sync/views.view.os_media.yml
+++ b/config/sync/views.view.os_media.yml
@@ -547,6 +547,8 @@ display:
           action_title: Action
           include_exclude: include
           selected_actions:
+            - cp_taxonomy_add_terms_media_action
+            - cp_taxonomy_remove_terms_media_action
             - media_delete_action
           entity_type: media
           plugin_id: bulk_form
