--- a/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.routing.yml
+++ b/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.routing.yml
@@ -5,7 +5,6 @@ cp.taxonomy:
     _entity_list: taxonomy_vocabulary
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.add:
@@ -15,7 +14,6 @@ cp.taxonomy.add:
     _entity_type_id: 'taxonomy_vocabulary'
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.edit:
@@ -24,7 +22,6 @@ cp.taxonomy.edit:
     _entity_form: 'taxonomy_vocabulary.default'
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.delete:
@@ -33,7 +30,6 @@ cp.taxonomy.delete:
     _entity_form: 'taxonomy_vocabulary.delete'
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.list:
@@ -42,7 +38,6 @@ cp.taxonomy.list:
     _form: '\Drupal\taxonomy\Form\OverviewTerms'
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.term.add:
@@ -51,7 +46,6 @@ cp.taxonomy.term.add:
     _controller: '\Drupal\taxonomy\Controller\TaxonomyController::addForm'
   requirements:
     _group_permission: 'manage taxonomy'
-    _group_member: 'TRUE'
   options:
     _admin_route: 'TRUE'
 cp.taxonomy.reset.vocab:
@@ -62,3 +56,57 @@ cp.taxonomy.reset.vocab:
     requirements:
       _group_permission: 'manage taxonomy'
       _group_member: 'TRUE'
+cp.taxonomy.add_terms_node_multiple_form:
+  path: '/cp/content/add-terms-to-node'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\AddTermsToNodeForm'
+    entity_type_id: 'node'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
+cp.taxonomy.remove_terms_node_multiple_form:
+  path: '/cp/content/remove-terms-from-node'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\RemoveTermsFromNodeForm'
+    entity_type_id: 'node'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
+cp.taxonomy.add_terms_media_multiple_form:
+  path: '/cp/content/add-terms-to-media'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\AddTermsToMediaForm'
+    entity_type_id: 'media'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
+cp.taxonomy.remove_terms_media_multiple_form:
+  path: '/cp/content/remove-terms-from-media'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\RemoveTermsFromMediaForm'
+    entity_type_id: 'media'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
+cp.taxonomy.add_terms_bibcite_reference_multiple_form:
+  path: '/cp/content/add-terms-to-publication'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\AddTermsToPublicationForm'
+    entity_type_id: 'bibcite_reference'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
+cp.taxonomy.remove_terms_bibcite_reference_multiple_form:
+  path: '/cp/content/remove-terms-from-publication'
+  defaults:
+    _form: '\Drupal\cp_taxonomy\Form\RemoveTermsFromPublicationForm'
+    entity_type_id: 'bibcite_reference'
+  requirements:
+    _group_permission: 'manage taxonomy'
+  options:
+    _admin_route: 'TRUE'
