--- a/config/sync/os_widgets.layout_context.search.yml
+++ b/config/sync/os_widgets.layout_context.search.yml
@@ -7,4 +7,8 @@ label: Search
 description: ''
 activationRules: "search\r\nsearch/*"
 weight: 0
-data: {  }
+data:
+  -
+    id: subsitesearch
+    region: sidebar_second
+    weight: '0'
