--- a/composer.json
+++ b/composer.json
@@ -175,10 +175,11 @@
         "drupal/block_visibility_groups": "^1.3",
         "drupal/bootstrap": "^3.17",
         "drupal/cancel_button": "^1.1",
-        "drupal/chosen": "^2.7",
+        "drupal/chosen": "^2.9",
         "drupal/ckeditor_bidi": "^2.1",
         "drupal/colorbutton": "1.1",
         "drupal/colordialog": "^1.2",
+        "drupal/config_filter": "^1.5",
         "drupal/config_ignore": "^2.1",
         "drupal/config_split": "^1.4",
         "drupal/config_sync": "^2.0@alpha",
