Issue #12991 - add support incase admin want to tweak the performance

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -15,6 +15,7 @@ blacklist:
   - 'block.block.booknavigation*'
   - 'block.block.entityviewcontent*'
 graylist:
+  - advagg.settings
   - elasticsearch_connector.cluster.elasticsearch_default
   - os_media.settings
   - os_publications.settings
