12935 changing teaser view (#13019)
* Issue #12935 - Changed the teaser mode in search api page setting.

* Issue #12935 - Removed and condition.

* Issue #12935 - Publication view mode reverted will do that in #12936.

* Issue #12935 - Publication view mode reverted to blank not default.

--- a/config/sync/search_api_page.search_api_page.search.yml
+++ b/config/sync/search_api_page.search_api_page.search.yml
@@ -58,18 +58,18 @@ view_mode_configuration:
       website: ''
       working_paper: ''
   'entity:node':
-    default: default
+    default: teaser
     overrides:
-      blog: ''
-      class: ''
-      events: ''
-      faq: ''
-      news: ''
-      page: ''
-      person: ''
-      presentation: ''
-      software_project: ''
-      software_release: ''
+      blog: teaser
+      class: teaser
+      events: teaser
+      faq: teaser
+      news: teaser
+      page: teaser
+      person: teaser
+      presentation: teaser
+      software_project: teaser
+      software_release: teaser
 show_search_form: true
 parse_mode: terms
 parse_mode_conjunction: OR
