12586 faceted search pages (#12904)
* Issue #12637 - DB Log Fixes - Jites to takeover

* Issue #12637 - Added plugin id and search-sort as default block.

* Issue #12637 - Added plugin id and search-sort as default block.

* Issue #12637 - Change in Label.

* Issue #12637 - Changes as per discussion.

* Issue #12637 - Fixed plugin type and added date object fix.

* Issue #12637 - Added condition for group name and removed template array.

* Issue #12637 - Fixed Typo.

* Issue #12637 - Patch to show the title in the theme.

* Issue #12637 - Added proper widget label.

* Issue #12637 - Removed prepend variable.

* Issue #12637 - Added changes in the test.

* Issue #12637 - Fixed PR comments.

* Issue #12637 - Fixed PHPCS.

* Issue #12637 - Added configuration for facet widget to check.

* Issue #12637 - Removed Debug.

* Issue #12637 - Added PR comments.

* Issue #12637 - Changed permission and also change the test which was failing in Travis but not in local.

* Issue #12637 - Changed permission.

* Issue #12637 - Changed permission.

* Issue #12637 - Added config changes and removed one extra field from search-sort.

* Issue #12586 - APP Global module.

* Issue #12586 - Load base search index & add condition for custom_search_bundle in loaded types.

* Issue #12586 - Added content on search page with all the details which is required.

* Issue #12586 - Added block and processor.

* Issue #12586 - Added the process to check if app is having access or not.

* Issue #12586 - Added the process to check if app is having access or not.

* Issue #12586 - Added config for block on main page.

* Issue #12586 - Status checked for app.

* Issue #12586 - Added config for block in search layout.

* Issue #12586 - Placed block on main page.

* Issue #12586 - Fixed Taxonmy and Sort Block issues.

* Issue #12586 - Added the block.

* Issue #12586 - Added Test for the Global Page.

* Issue #12586 - Removed commented

--- a/profile/modules/custom/os_search/os_search.routing.yml
+++ b/profile/modules/custom/os_search/os_search.routing.yml
@@ -9,3 +9,10 @@ os_search.search_api_index.facets_widgets:
     _title: 'Facet Widgets'
   requirements:
     _permission: 'administer search_api_page'
+os_search.app_global:
+  path: '/browse/{app}'
+  defaults:
+    _title_callback: '\Drupal\os_search\Controller\AppGlobalContentController::getTitle'
+    _controller: '\Drupal\os_search\Controller\AppGlobalContentController::getAppList'
+  requirements:
+    _global_app_access: 'TRUE'
