--- a/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
+++ b/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
@@ -4,21 +4,11 @@ status: true
 dependencies:
   config:
     - block_content.type.section_navigation
-    - field.field.block_content.section_navigation.body
-  module:
-    - text
 id: block_content.section_navigation.default
 targetEntityType: block_content
 bundle: section_navigation
 mode: default
-content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-    region: content
+content: {  }
 hidden:
   langcode: true
   search_api_excerpt: true
