Issue #12949 - Added vsite_theme attribute to themes which can be used for creating vsite.

--- a/profile/themes/soft/soft.info.yml
+++ b/profile/themes/soft/soft.info.yml
@@ -4,6 +4,7 @@ description: 'Soft theme.'
 base theme: os_base
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
