--- a/profile/themes/adams/adams.info.yml
+++ b/profile/themes/adams/adams.info.yml
@@ -4,6 +4,7 @@ description: A dark grey and red flavor of college theme.
 base theme: hwpi_college
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
