--- a/profile/themes/blue_sky/blue_sky.info.yml
+++ b/profile/themes/blue_sky/blue_sky.info.yml
@@ -4,6 +4,7 @@ description: Blue header and menu bar version of the Classic theme
 base theme: hwpi_classic
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
