--- a/profile/themes/cabot/cabot.info.yml
+++ b/profile/themes/cabot/cabot.info.yml
@@ -4,6 +4,7 @@ description: Cabot is a blue & yellow version of the Classic theme
 base theme: hwpi_classic
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
