--- a/profile/themes/documental/documental.info.yml
+++ b/profile/themes/documental/documental.info.yml
@@ -4,6 +4,7 @@ description: An ideal theme for documenting projects.
 base theme: os_base
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
