--- a/profile/themes/golden_accents/golden_accents.info.yml
+++ b/profile/themes/golden_accents/golden_accents.info.yml
@@ -4,6 +4,7 @@ description: 'Golden accents.'
 base theme: vibrant
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
