--- a/profile/themes/hwpi_widener/hwpi_widener.info.yml
+++ b/profile/themes/hwpi_widener/hwpi_widener.info.yml
@@ -4,6 +4,7 @@ description: A classic looking theme for use by departments at Harvard.
 base theme: os_base
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
