--- a/profile/themes/indigo/indigo.info.yml
+++ b/profile/themes/indigo/indigo.info.yml
@@ -4,6 +4,7 @@ description:  A dark blue nav bar version of the Classic theme
 base theme: hwpi_classic
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
