--- a/profile/themes/loeb/loeb.info.yml
+++ b/profile/themes/loeb/loeb.info.yml
@@ -4,6 +4,7 @@ description: A loeb version of the Classic theme
 base theme: hwpi_sterling
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
