--- a/profile/themes/saffron_accents/saffron_accents.info.yml
+++ b/profile/themes/saffron_accents/saffron_accents.info.yml
@@ -4,6 +4,7 @@ description: 'A light color version of the Modern theme with saffron accents'
 base theme: modern
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
