--- a/profile/themes/smart/smart.info.yml
+++ b/profile/themes/smart/smart.info.yml
@@ -4,6 +4,7 @@ description: 'Smart theme'
 base theme: os_base
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
