--- a/profile/themes/teal_accents/teal_accents.info.yml
+++ b/profile/themes/teal_accents/teal_accents.info.yml
@@ -4,6 +4,7 @@ description: A monochrome version of the Classic theme
 base theme: hwpi_classic
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
