--- a/profile/themes/white/white.info.yml
+++ b/profile/themes/white/white.info.yml
@@ -4,6 +4,7 @@ description: 'A clean white version of the Classic theme'
 base theme: modern
 core: 8.x
 type: theme
+vsite_theme: true
 
 regions:
   branding_header: 'Branding Header'
