Issue #12924 - Fix codecoverage Travis timeout (#12925)

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
     - script: robo job:check-module-circular-dependency
     - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4"
     - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
-    - script: robo job:run-kernel-tests "cp-1,cp-2,other,cp-menu,profiles,redirect,cp-appearance,os-search"
+    - script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
     - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
     - script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
     - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
@@ -77,7 +77,10 @@ jobs:
       script: robo job:run-kernel-tests-code-coverage "cp-2"
       after_success: bash <(curl -s https://codecov.io/bash)
     - stage: codecov
-      script: robo job:run-kernel-tests-code-coverage "other"
+      script: robo job:run-kernel-tests-code-coverage "other-1"
+      after_success: bash <(curl -s https://codecov.io/bash)
+    - stage: codecov
+      script: robo job:run-kernel-tests-code-coverage "other-2"
       after_success: bash <(curl -s https://codecov.io/bash)
     - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "cp-menu"
